# ai-agent-demos

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENT_DEV.md  CHANGELOG.md  CI_CD_QUICKREF.md  CI_CD_SUMMARY.md  EVALUATION_QUICKREF.md  GETTING_STARTED.md  MIGRATION_SUMMARY.md  Makefile  PROJECT_SUMMARY.md  RAG_ENHANCEMENT_SUMMARY.md  RAG_FLOW_DIAGRAM.md  README.md  SECURITY.md  keychain_helper.py  mypy.ini  pyproject.toml  quickstart.sh  ruff.toml  start.sh
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: ci-cd.yml  ci.yml  deploy.yml  pr-checks.yml
agents/: __init__.py
agents/loan-approval/policies/: generate_policies.py
agents/loan-approval/src/: __init__.py  agent.py  api.py  config.py  tools.py
agents/loan-approval/tests/: __init__.py  test_agent.py  test_performance.py
agents/loan_approval/: Dockerfile  Makefile  README.md  __init__.py  agent.py  api.py  test_api.sh
agents/loan_approval/datasets/: README.md  ground_truth.json  sample_approved_request.json
agents/loan_approval/policies/: __init__.py  generate_policies.py
agents/loan_approval/src/: agent.py  api.py  config.py  tools.py
agents/loan_approval/tests/: test_agent.py  test_performance.py
config/: config.prod.yaml  config.test.yaml  config.yaml
data/evaluation/: loan_approval_test_set.json
docs/: ARTIFACTORY_SETUP.md  CI_CD_INTEGRATION.md  CREATING_AGENTS.md  DEVELOPER_GUIDE.md  LLM_LOGGING.md  LLM_LOGGING_QUICKSTART.md  MLFLOW_MONITORING.md  TRACING.md  UV_MIGRATION.md  developer-guide.md
examples/: __init__.py  llm_logging_demo.py  test_loan_api.py  tracing_demo.py
frontend/: .gitignore  Makefile  README.md  index.html  package.json  playwright.config.js
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: LoanApplicationForm.jsx
frontend/tests/: README.md  loan-application.spec.js
infrastructure/: Makefile
infrastructure/terraform/: ecs.tf  main.tf  networking.tf  variables.tf
infrastructure/terraform/environments/: prod.tfvars  test.tfvars
scripts/: create_agent.sh  evaluate_agent.py  generate_loan_docs.py  load_documents.py
shared/: __init__.py  alerting.py  config.py  datasets.py  logging_utils.py  metrics.py  mlflow_tracking.py  model_evaluation.py  security.py
shared/models/: __init__.py  loan.py
shared/monitoring/: __init__.py  llm_logger.py  logger.py  metrics.py  teams_notifier.py
shared/utils/: __init__.py  keychain.py  pdf_loader.py  security.py
tests/: conftest.py  test_llm_logging.py
tests/agents/loan_approval/: test_agent.py  test_api.py
tests/fixtures/: loan_fixtures.py
tests/performance/: test_loan_approval_performance.py
tests/shared/: test_security.py
